--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/fontello.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Marsy PSD</title>
 </head>
@@ -69,6 +70,48 @@
       </div>
     </div>
   </div>
+
+  <div class="team">
+    <div class="container">
+      <div class="block__head">
+        <h2 class="block__title">This is our team</h2>
+        <p class="block__text">We are small but effective and ...</p>
+      </div>
+      <div class="team__inner">
+        <div class="team__item">
+          <img class="team__img" src="img/team1.png" alt="Mark">
+          <h3 class="team__title">Mark Once</h3>
+          <p class="team__text">Designer & Front-End Developer</p>
+          <div class="team__icon-box">
+            <a href="#"><i class="icon-twitter"></i></a>
+            <a href="#"><i class="icon-instagram"></i></a>
+          </div>
+        </div>
+        <div class="team__item">
+          <img class="team__img" src="img/team2.png" alt="Justin">
+          <h3 class="team__title">Justin Twice</h3>
+          <p class="team__text">Founder & CEO</p>
+          <div class="team__icon-box">
+            <a href="#"><i class="icon-twitter"></i></a>
+            <a href="#"><i class="icon-instagram"></i></a>
+          </div>
+        </div>
+        <div class="team__item">
+          <img class="team__img" src="img/team3.png" alt="Antonio">
+          <h3 class="team__title">Antonio Never</h3>
+          <p class="team__text">Someone & Somewhere</p>
+          <div class="team__icon-box">
+            <a href="#"><i class="icon-twitter"></i></a>
+            <a href="#"><i class="icon-instagram"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- 
+<i class="icon-twitter"></i>
+<i class="icon-instagram"></i>
+-->
 </body>
 
 </html>
