--- a/index.html
+++ b/index.html
@@ -108,9 +108,42 @@
       </div>
     </div>
   </div>
-  <!-- 
-<i class="icon-twitter"></i>
-<i class="icon-instagram"></i>
+
+  <div class="provide">
+    <div class="container">
+      <div class="block__head inverse">
+        <h2 class="block__title">We provide you everything</h2>
+        <p class="block__text">Maybe not everything, but we provide you some stuff.</p>
+      </div>
+      <div class="provide__inner">
+        <div class="provide__item">
+          <i class="icon-chart-line"></i>
+          <h3 class="provide__title">Some Analytics</h3>
+          <p class="provide__text">Aenean nisi lectus, convallis non lorem sit amet, rhoncus malesuada justo</p>
+        </div>
+        <div class="provide__item">
+          <i class="icon-heart"></i>
+          <h3 class="provide__title">We provide you love</h3>
+          <p class="provide__text">Aenean nisi lectus, convallis non lorem sit amet, rhoncus malesuada justo</p>
+        </div>
+        <div class="provide__item">
+          <i class="icon-upload-cloud-outline"></i>
+          <h3 class="provide__title">And Some Cloud</h3>
+          <p class="provide__text">Aenean nisi lectus, convallis non lorem sit amet, rhoncus malesuada justo</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<!-- 
+icon-phone
+icon-location
+icon-mail
+icon-heart
+icon-upload-cloud-outline
+icon-twitter
+icon-instagram
+icon-chart-line
 -->
 </body>
 
