--- a/index.html
+++ b/index.html
@@ -135,16 +135,46 @@
     </div>
   </div>
 
-<!-- 
-icon-phone
-icon-location
-icon-mail
-icon-heart
-icon-upload-cloud-outline
-icon-twitter
-icon-instagram
-icon-chart-line
--->
+  <div class="contact">
+    <div class="container">
+      <div class="block__head">
+        <h2 class="block__title">Contact Us</h2>
+        <p class="block__text">We know what we need to do</p>
+      </div>
+      <div class="contact__inner">
+        <div class="contact__icon-box">
+          <div class="contact__item">
+            <i class="icon-phone"></i>
+            <div class="contact__text"><a href="tel:555222333">555-222-333</a></div>
+          </div>
+          <div class="contact__item">
+            <i class="icon-location"></i>
+            <div class="contact__text"><a href="https://goo.gl/maps/PzEtq1v8Ymggvse28" target="_blank">Here is some address</a></div>
+          </div>
+          <div class="contact__item">
+            <i class="icon-mail"></i>
+            <div class="contact__text"><a href="mailto:somemail@hotmail.com">somemail@hotmail.com</a></div>
+          </div>
+        </div>
+        <form class="contact__form">
+          <input class="contact__name" type="text" placeholder="Full Name">
+          <input class="contact__email" type="email" placeholder="Email">
+          <input class="contact__number" type="tel" placeholder="Number">
+          <textarea class="contact__textarea" placeholder="Write your Message here..."></textarea>
+          <input type="submit" class="contact__button" value="Submit">
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__text">
+        Copyright &copy; Kenan Hamidic. All rights reserved.
+      </div>
+    </div>
+  </footer>
+
 </body>
 
 </html>
