--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header class="header">
     <div class="container">
-      <nav>
+      <nav class="menu__desktop">
         <ul class="menu">
           <li class="menu__item active">
             <a href="#">Home</a>
@@ -38,6 +38,32 @@
           </li>
         </ul>
       </nav>
+      <nav class="menu__mobile">
+        <a href="#"><img src="img/logo.png" alt="Логотип" class="logo"></a>
+        <div class="menu__burger">
+
+        </div>
+        <ul class="menu"> 
+          <li class="menu__item active">
+            <a href="#">Home</a>
+          </li>
+          <li class="menu__item">
+            <a href="#">About Us</a>
+          </li>
+          <li class="menu__item">
+            <a href="#">Team</a>
+          </li>
+          <li class="menu__item">
+            <a href="#">Services</a>
+          </li>
+          <li class="menu__item">
+            <a href="#">Blog</a>
+          </li>
+          <li class="menu__item">
+            <a href="#">Contact Us</a>
+          </li>
+        </ul>
+      </nav>
       <div class="header__content">
         <h1 class="header__title">We build it with passion</h1>
         <p class="header__text">Just to be clear, we do this for fun not for you, just kidding.</p>
@@ -46,7 +72,7 @@
     </div>
   </header>
 
-  <div class="about">
+<div class="about">
     <div class="container">
       <div class="about__inner">
         <div class="about__item">
