--- a/index.html
+++ b/index.html
@@ -19,48 +19,51 @@
             <a href="#">Home</a>
           </li>
           <li class="menu__item">
-            <a href="#">About Us</a>
+            <a href="#about">About Us</a>
           </li>
           <li class="menu__item">
-            <a href="#">Team</a>
+            <a href="#team">Team</a>
           </li>
           <li class="menu__item">
             <a href="#"><img src="img/logo.png" alt="Логотип" class="logo"></a>
           </li>
           <li class="menu__item">
-            <a href="#">Services</a>
+            <a href="#provide">Services</a>
           </li>
           <li class="menu__item">
             <a href="#">Blog</a>
           </li>
           <li class="menu__item">
-            <a href="#">Contact Us</a>
+            <a href="#contact">Contact Us</a>
           </li>
         </ul>
       </nav>
       <nav class="menu__mobile">
-        <a href="#"><img src="img/logo.png" alt="Логотип" class="logo"></a>
-        <div class="menu__burger">
-
+        <div class="menu__inner">
+          <a href="#"><img src="img/logo.png" alt="Логотип" class="logo"></a>
+          <div class="menu__burger">
+            <span class="burger__item">menu toggle</span>
+          </div>
         </div>
+        
         <ul class="menu"> 
           <li class="menu__item active">
             <a href="#">Home</a>
           </li>
           <li class="menu__item">
-            <a href="#">About Us</a>
+            <a href="#about">About Us</a>
           </li>
           <li class="menu__item">
-            <a href="#">Team</a>
+            <a href="#team">Team</a>
           </li>
           <li class="menu__item">
-            <a href="#">Services</a>
+            <a href="#provide">Services</a>
           </li>
           <li class="menu__item">
             <a href="#">Blog</a>
           </li>
           <li class="menu__item">
-            <a href="#">Contact Us</a>
+            <a href="#contact">Contact Us</a>
           </li>
         </ul>
       </nav>
@@ -72,7 +75,7 @@
     </div>
   </header>
 
-<div class="about">
+<div class="about" id="about">
     <div class="container">
       <div class="about__inner">
         <div class="about__item">
@@ -97,7 +100,7 @@
     </div>
   </div>
 
-  <div class="team">
+  <div class="team" id="team">
     <div class="container">
       <div class="block__head">
         <h2 class="block__title">This is our team</h2>
@@ -135,7 +138,7 @@
     </div>
   </div>
 
-  <div class="provide">
+  <div class="provide" id="provide">
     <div class="container">
       <div class="block__head inverse">
         <h2 class="block__title">We provide you everything</h2>
@@ -161,7 +164,7 @@
     </div>
   </div>
 
-  <div class="contact">
+  <div class="contact" id="contact">
     <div class="container">
       <div class="block__head">
         <h2 class="block__title">Contact Us</h2>
@@ -201,6 +204,8 @@
     </div>
   </footer>
 
+  <script src="js/jquery-3.6.0.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
